fix: improve purgecss configuration

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,46 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-.list-enter-active,
-.list-leave-active,
-.list-move {
-    transition: .3s cubic-bezier(0.59, 0.12, 0.34, 0.95);
-    transition-property: opacity, transform;
-}
-
-.list-leave-to,
-.list-enter {
-    opacity: 0;
-}
-
-.list-enter {
-    transform: scale(0.5);
-}
-
-.list-enter-to {
-    opacity: 1;
-    transform: scale(1);
-}
-
-.list-leave-active {
-    width: 100%;
-    position: absolute;
-}
-
-.list-leave-to {
-    opacity: 0;
-    transform: scaleY(0);
-    transform-origin: center top;
-}
-
-.expand-enter-active,
-.expand-leave-active {
-    overflow: hidden;
-    transition: height .3s ease;
-}
-
-.expand-enter,
-.expand-leave-to {
-    height: 0;
-}
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+@import 'transitions/index.css';
